# BooleanSimplification

./: .gitignore  BlackJackMachine.py  BooleanReducer.py  DataStorageTesting.py  README.md
C++/: CMakeLists.txt  main.cpp
